# dumbbell

./: .gitignore  Cargo.toml  LICENSE  Plan.md  build.rs  check_arch.cu  plan.md
.devcontainer/: devcontainer.json
data/002/: config.txt
data/len0.01_K1.5e6/: config.txt
data/len0.02_K1.5e6/: config.txt
data/len0.08_K1.5e6/: config.txt
graph_scripts/: time.gp  time.tex
src/: kernel.cu  main.rs  renderer.rs  simulation.cu  simulation.rs  statistics.rs
