[package]
name = "dumbbell"
version = "0.3.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
itertools = "0.14.0"
egui = "0.33.3"
eframe = "0.33.3"
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", optional = true, features = ["parallel"] }

[features]
default = ["cuda"]
cuda = ["cc"]

[profile.release]
lto = "fat"
